--- a/style.css
+++ b/style.css
@@ -1,154 +1,163 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
+* {
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    overflow: hidden;
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  height: 100vh;
+  overflow: hidden;
 }
 
-h2{
-    font-size: 40px;
-    margin: 10px;
-    text-transform: uppercase;
+h4 {
+  font-size: 50px;
+  margin: 50px;
+  text-transform: uppercase;
 }
 
 .counter {
-    position: fixed;
-    top:100px;
-    left:100px;
-    transform: translate(-50%, -50%);
-    text-align: center;
+  position: fixed;
+  top: 25%;
+  left: 25%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
-.counter.hide {
-    transform: translate(-50%, -50%) scale(1);
-    animation: hide 0.2s ease-out;
+ .counter.hide {
+  transform: translate(-50%, -50%) scale(0);
+  animation: hide 0.5s ease-out;
 }
+
 @keyframes hide {
-0% {
+  0% {
     transform: translate(-50%, -50%) scale(1);
-}
-100% {
-    transform: translate(-50%, -50%) scale(0);
-}} 
+  }
 
+  100% {
+    transform: translate(-50%, -50%) scale(0);
+  }
+} 
 
 .final {
-    position: fixed;
-    top:100px;
-    left:100px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  text-align: center;
+}
+
+ .final.show {
+  transform: translate(-50%, -50%) scale(1);
+  animation: show 0.2s ease-out;
+ }
+
+@keyframes show {
+  0% {
     transform: translate(-50%, -50%) scale(0);
-    text-align: center;
+  }
 
-}
-.final.show {
+  30% {
+    transform: translate(-50%, -50%) scale(1.4);
+  }
+
+  100% {
     transform: translate(-50%, -50%) scale(1);
-    animation: show 0.2s ease-out;
-}
+  }
+} 
 
-@keyfrems show {
-    0%{
-        transform: translate(-50%, -50%) scale(0)
-    }
-    30% {
-        transform: translate(-50%, -50%) scale(1.4); 
-    }
-    100% {
-        transform: translate(-50%, -50%) scale(1);
-    }
-}
 .nums {
-    color:blue;
-    font-size: 50px;
-    position:relative;
-    overflow: hidden;
-    width: 250px;
-    height: 50px;
+  color: #3498db;
+  font-size: 50px;
+  position: relative;
+  overflow: hidden;
+  width: 450px;
+  height: 150px;
 }
 
-.nums span.in{
-transform: translate(-50%, -50%)  rotate(0deg);
-animation: goIn 0.5 ease-in-out;
+.nums span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(120deg);
+  transform-origin: bottom center;
+}
+
+.nums span.in {
+  transform: translate(-50%, -50%) rotate(0deg);
+  animation: goIn 0.5s ease-in-out;
 }
 
 .nums span.out {
-animation: goOut 0.5 ease-in-out;
+  animation: goOut 0.5s ease-in-out;
 }
 
-@keyframes goIn {
-    0% {
-      transform: translate(-50%, -50%) rotate(120deg);
-    }
-  
-    30% {
-      transform: translate(-50%, -50%) rotate(-20deg);
-    }
-  
-    60% {
-      transform: translate(-50%, -50%) rotate(10deg);
-    }
-  
-    100% {
-      transform: translate(-50%, -50%) rotate(0deg);
-    }
+ @keyframes goIn {
+  0% {
+    transform: translate(-50%, -50%) rotate(120deg);
   }
-  
-  @keyframes goOut {
-    0% {
-      transform: translate(-50%, -50%) rotate(0deg);
-    }
-  
-    60% {
-      transform: translate(-50%, -50%) rotate(20deg);
-    }
-  
-    100% {
-      transform: translate(-50%, -50%) rotate(-120deg);
-    }
-  } 
 
+  30% {
+    transform: translate(-50%, -50%) rotate(-20deg);
+  }
 
-#replay {
-    background-color:#3498db ;
-    color:white;
-    border:none ;
-    border-radius:2rem ;
-    padding: 0.7rem;
-    text-align: center;
-    display:inline-block;
-    cursor:pointer;
-    transition: all 0.3s;
+  60% {
+    transform: translate(-50%, -50%) rotate(10deg);
+  }
+
+  100% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
 }
 
-#replay span {
-    cursor : pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.4s;
+@keyframes goOut {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+
+  60% {
+    transform: translate(-50%, -50%) rotate(20deg);
+  }
+
+  100% {
+    transform: translate(-50%, -50%) rotate(-120deg);
+  }
+} 
+
+#replay{
+  background-color: #3498db;
+  border-radius: 3px;
+  border: none;
+  color: aliceblue;
+  padding: 5px;
+  text-align: center;
+  display: inline-block;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+#replay span{
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.3s;
 }
 
 #replay span:after{
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-  }
-  
-  #replay:hover span{
-    padding-right: 25px;
-  }
-  
-  #replay:hover span:after{
-    opacity: 1;
-    right: 0;
-  }
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+#replay:hover span{
+  padding-right: 25px;
+}
+
+#replay:hover span:after{
+  opacity: 1;
+  right: 0;
+}
